--- a/03-box-model-dev-tools/instructor/lesson/css/styles.css
+++ b/03-box-model-dev-tools/instructor/lesson/css/styles.css
@@ -1,8 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   line-height: 1.5;
   font-weight: 900;
+}
+
+h1 {
+  color: red;
+  background-color: black;
+}
+
+h1.test {
+  color: yellow;
 }
 
 #main-article {
