--- a/18-http-requests-and-responses/instructor/my_project/my_site/templates/todo_list.html
+++ b/18-http-requests-and-responses/instructor/my_project/my_site/templates/todo_list.html
@@ -8,5 +8,16 @@
     <h1>TODO List for {{ name }}</h1>
 
     <p>The current time is: {{ current_time }}</p>
+
+    <ul>
+      {% for item in todo_list %}
+        <li>{{ item }}</li>
+      {% endfor %}
+    </ul>
+
+    {% if profile_pic_url %}
+      <img src="{{ profile_pic_url }}">
+    {% endif %}
+
   </body>
 </html>
