[19-mvc-migrations] Rename email to email_address

--- a/19-mvc-migrations/instructor/my_project/crm/templates/contacts_index.html
+++ b/19-mvc-migrations/instructor/my_project/crm/templates/contacts_index.html
@@ -11,7 +11,7 @@
       {% for contact in contacts %}
         <li>
           <p>{{ contact.full_name }}</p>
-          <p>{{ contact.email }}</p>
+          <p>{{ contact.email_address }}</p>
           <p>{{ contact.note }}</p>
         </li>
       {% endfor %}
