--- a/19-mvc-migrations/instructor/my_project/crm/templates/contacts_index.html
+++ b/19-mvc-migrations/instructor/my_project/crm/templates/contacts_index.html
@@ -12,7 +12,7 @@
         <li>
           <p>{{ contact.full_name }}</p>
           <p>{{ contact.email_address }}</p>
-          <p>{{ contact.note }}</p>
+          <p>{{ contact.notes }}</p>
         </li>
       {% endfor %}
     </ul>
