--- a/20-templates-and-layouts/instructor/airplanes/airplanes/templates/base.html
+++ b/20-templates-and-layouts/instructor/airplanes/airplanes/templates/base.html
@@ -7,24 +7,28 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>
+    {% block title %}
+    {% endblock %}
+    </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header>This is the header from base.html</header>
-    
+
+    <header>This is the header</header>
+
     <main>
-      {% block content  %}
-        <!-- template content will be rendered here -->
-      {% endblock  %}
+      {% block content %}
+        <!-- This is where the content should be rendered -->
+      {% endblock %}
     </main>
     
-    <footer>This is the footer from base.html</footer>
+    <footer>This is the footer</footer>
 
     <script src="" async defer></script>
   </body>
