--- a/20-templates-and-layouts/instructor/airplanes/airplanes/templates/show.html
+++ b/20-templates-and-layouts/instructor/airplanes/airplanes/templates/show.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-  <small><a href="/airplanes">< Back to List of Airplanes</a></small>
-  <h1>{{ airplane }}</h1>
-  <p>TODO: description of airplane, image?</p>
+
+<h1>{{ airplane }}</h1>
+
+<p>{{ airplane.description }}</p>
+
 {% endblock %}
-
-
