[28-apis-part-2] Fetch weather and tracks

--- a/28-apis-part-2/instructor/moodtrip/trips/templates/show.html
+++ b/28-apis-part-2/instructor/moodtrip/trips/templates/show.html
@@ -18,7 +18,7 @@
   {% if trip.tracks.count %}
     <h4>Total {{ trip.tracks.count }} songs</h4>
     <ul>
-      {% for track in trips.tracks.all %}
+      {% for track in trip.tracks.all %}
       <li>
         <strong>{{ track.artist }}</strong>
         -
