--- a/35-ajax-and-forms/instructor/robots/robots/templates/robot.html
+++ b/35-ajax-and-forms/instructor/robots/robots/templates/robot.html
@@ -1,6 +1,7 @@
+{% extends 'base.html' %}
 {% block content %}
-  <h2>Robot Details:</h2>
   <img src="http://robohash.org/{{ robot.address }}" alt="{{ robot.name }}">
+
   <dl>
     <dt>Name</dt>
     <dd>{{ robot.name }}</dd>
@@ -14,5 +15,6 @@
     <dt>Japanese?</dt>
     <dd>{{ robot.japanese }}</dd>
   </dl>
+
   <a href="{% url 'robots_index' %}">Back</a>
 {% endblock %}
