Solution code up to submitting

--- a/35-ajax-and-forms/instructor/robots/robots/templates/base.html
+++ b/35-ajax-and-forms/instructor/robots/robots/templates/base.html
@@ -15,9 +15,9 @@
     <main>
       <nav>
         <a href="/">All Robots</a> |
-        <a href="/robots/new">New Robot</a>
+        <a class="new-robot-link" href="/robots/new">New Robot</a>
       </nav>
-      
+
       {% block content %}
       {% endblock %}
     </main>
