--- a/35-ajax-and-forms/instructor/robots/robots/templates/robots.html
+++ b/35-ajax-and-forms/instructor/robots/robots/templates/robots.html
@@ -2,13 +2,14 @@
 {% block content %}
   <section class="robots">
     <div class="robots__container">
+      <div class="robots__container__form"></div>
       <h2>List of Robots</h2>
       {% for robot in robots %}
         <article class="robots__robot">
           <a href="{% url 'robots_show' id=robot.pk %}" class="robot-name">{{ robot.name }}</a>
           <div class="robot-actions">
-            <a href="{% url 'robots_edit' id=robot.pk %}" class="robot-edit-link">Edit</a> | 
-            <a href="{% url 'robots_delete' id=robot.pk %}" class="robot-delete-link">Delete</a>  
+            <a href="{% url 'robots_edit' id=robot.pk %}" class="robot-edit-link">Edit</a> |
+            <a href="{% url 'robots_delete' id=robot.pk %}" class="robot-delete-link">Delete</a>
           </div>
         </article>
       {% endfor %}
